# ente

./: FORK.md  UPSTREAM_SYNC.md
.github/scripts/: check_workflow_security.rb  check_workflow_security_test.rb
.github/workflows/: codeql.yml  dependency-review.yml  self-hosted-mobile-linux.yml  self-hosted-mobile-macos.yml  upstream-sync-drift.yml  warm-caches.yml  workflow-security-checks.yml
desktop/: package-lock.json  package.json
desktop/changes/: fix-watch-upload-large-library-oom.md
desktop/src/: main.ts
infra/ml/: pyproject.toml
infra/ml/playground/: pyproject.toml
infra/ml/playground/CLIP/: mobileclip_onnx.ipynb
infra/ml/playground/YOLOv5Face/: yoloface_onnx.ipynb
infra/ml/test/: README.md  run_ml_parity_tests.sh
infra/ml/test/tools/: compare_parity_outputs.py
living_docs/: ConfigurableSelfHostedMobileServer.md  ConfigurableSelfHostedMobileServerArchitecture.md  FirebaseAndroidDistribution.md  FirebaseIOSDistribution.md  FirebaseIOSDistributionArchitecture.md  ForkGitHubActions.md  ForkGitHubActionsArchitecture.md  HybridUpstreamSynchronizationAutomation.md  LockedSelfHostedAndroid.md  LockedSelfHostedIOS.md  UpstreamEnteSynchronization.md
mobile/apps/auth/: pubspec.yaml
mobile/apps/auth/changes/: improve-app-lock-screens.md  two-factor-status.md
mobile/apps/auth/lib/: main.dart
mobile/apps/auth/lib/services/: preference_service.dart  window_listener_service.dart
mobile/apps/auth/lib/ui/: home_page.dart
mobile/apps/auth/lib/utils/: email_util.dart
mobile/apps/auth/linux/: CMakeLists.txt
mobile/apps/auth/windows/: CMakeLists.txt
mobile/apps/locker/: pubspec.yaml
mobile/apps/locker/assets/: save_to_locker.riv  share_your_legacy.riv
mobile/apps/photos/: README.md  SELF_HOSTED_ANDROID_DISTRIBUTION_GUIDE.md  SELF_HOSTED_BUILD_GUIDE.md  SELF_HOSTED_DOCUMENTATION.md  pubspec.yaml
mobile/apps/photos/android/app/: build.gradle
mobile/apps/photos/assets/: memories.riv
mobile/apps/photos/changes/: cast-reliability.md  device-cache-settings-ui.md  notification-permissions.md  preserve-exif-on-edit.md
mobile/apps/photos/ios/: Podfile
mobile/apps/photos/ios/Flutter/: Debug-selfhosted.xcconfig  Profile-selfhosted.xcconfig  Release-selfhosted.xcconfig  SelfHosted.xcconfig  SelfHostedDebugBase.xcconfig  SelfHostedProfileBase.xcconfig  SelfHostedReleaseBase.xcconfig
mobile/apps/photos/ios/Runner.xcodeproj/: project.pbxproj
mobile/apps/photos/lib/: service_locator.dart
mobile/apps/photos/lib/core/: configuration.dart  constants.dart  errors.dart
mobile/apps/photos/lib/db/: files_db.dart  trash_db.dart
mobile/apps/photos/scripts/: build_self_hosted_android.sh  build_self_hosted_ios.sh  prepare_self_hosted_android_release.dart  prepare_self_hosted_ios_release.dart  prepare_self_hosted_ios_release.sh  publish_self_hosted_android_release.dart  publish_self_hosted_android_release.sh  publish_self_hosted_ios_release.dart  publish_self_hosted_ios_release.sh  validate_self_hosted_endpoint.dart
rust/: Cargo.toml
rust/apps/cli/: Cargo.toml
rust/apps/cli/src/: auth_flow.rs
rust/apps/cli/src/api/: models.rs
rust/apps/cli/src/commands/: account.rs  export.rs  sync.rs
rust/apps/cli/src/models/: error.rs
rust/apps/cli/src/sync/: download.rs
rust/apps/ensu/src-tauri/: Cargo.toml
rust/apps/ensu/src-tauri/src/: main.rs
rust/apps/ensu/src-tauri/src/commands/: chat_db.rs  chat_db_migration.rs  crypto.rs  llm.rs
rust/bindings/frb/ente-rust/: Cargo.toml
rust/bindings/frb/ente-rust/src/api/: contacts.rs
rust/bindings/frb/photos/src/api/: ml_indexing_api.rs  motion_photo_api.rs
rust/bindings/uniffi/ensu/: Cargo.toml
rust/bindings/uniffi/ensu/src/: assets.rs  db.rs  lib.rs  llm.rs  retrieval.rs
rust/bindings/wasm/ente-wasm/: Cargo.toml
rust/bindings/wasm/ente-wasm/src/: auth.rs  contacts.rs  crypto.rs  legacy_kit.rs
rust/bindings/wasm/space/src/: space.rs
rust/crates/accounts/: Cargo.toml
rust/crates/accounts/src/: client.rs  error.rs  flow.rs  lib.rs  models.rs
rust/crates/accounts/src/auth/: api.rs  key_gen.rs  mod.rs  recovery.rs  srp.rs  types.rs
rust/crates/accounts/tests/: accounts.rs
rust/crates/assets/: Cargo.toml
rust/crates/assets/src/: archive.rs  download.rs  lib.rs  store.rs
rust/crates/contacts/: Cargo.toml
rust/crates/contacts/src/: client.rs  crypto.rs  error.rs  legacy_kit_models.rs  legacy_kit_transport.rs  legacy_models.rs  legacy_transport.rs
rust/crates/contacts/src/legacy_kit/: mod.rs  owner_blob.rs  shares.rs
rust/crates/contacts/tests/: contacts.rs  contacts_mock.rs
rust/crates/contacts/tests/support/: auth.rs  contacts.rs
rust/crates/core/: Cargo.toml
rust/crates/core/src/: b64.rs  lib.rs
rust/crates/core/src/crypto/: encoding.rs  error.rs  mod.rs
rust/crates/ensu/: Cargo.toml
rust/crates/ensu/src/: config.rs  retrieval.rs
rust/crates/ensu/src/config/: knowledge.rs
rust/crates/ensu/src/db/: crypto.rs  error.rs
rust/crates/ensu/src/llm/: context.rs  event.rs  generate.rs
rust/crates/ensu/src/model/: migrations.rs  mod.rs
rust/crates/ensu/src/retrieval/: pack.rs
rust/crates/image/src/: decode.rs
rust/crates/paste/src/: lib.rs
rust/crates/photos/: Cargo.toml
rust/crates/photos/examples/: ml_goldens.rs
rust/crates/photos/src/ml/inpaint/: mod.rs  pipeline.rs  scheduler.rs
rust/crates/photos/tests/: ml_indexing.rs
rust/crates/photos/tests/support/: ml_indexing.rs
rust/crates/test-support/src/: lib.rs
rust/space/: Cargo.toml
rust/space/src/: crypto.rs  error.rs
rust/space/src/client/: entity_keys.rs  friends.rs  keys.rs  messages.rs  mod.rs  posts.rs  profiles.rs  test_support.rs  tests.rs
rust/space/tests/support/: auth.rs  space.rs
scripts/: test_self_hosted_mobile_linux.sh  upstream_sync.rb
scripts/lib/: upstream_sync.rb
scripts/test/: upstream_sync_test.rb  upstream_sync_workflow_test.rb
server/pkg/api/: cast.go
server/pkg/controller/cast/: controller.go
server/pkg/controller/collections/: file_action.go
server/pkg/repo/: collection.go
server/pkg/repo/cast/: repo.go  repo_test.go
web/apps/albums/: package.json
(+300 files in other folders)
