[project]
name = "ente-clean-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.2",
    "onnxruntime>=1.19.2",
    "opencv-python>=4.10.0.84",
    "pillow-heif>=0.21.0",
    "pillow>=10.4.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
