[project]
name = "ente-clean-ml-playground"
version = "0.1.0"
description = "Exploratory ML notebooks and model conversion tools for Ente ML"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.0",
    "onnx>=1.22.0",
    "onnxconverter-common>=1.16.0",
    "onnxruntime-extensions>=0.15.2",
    "onnxruntime>=1.27.0",
    "onnxsim>=0.6.5",
    "opencv-python>=5.0.0.93",
    "pandas>=3.0.3",
    "pillow>=12.3.0",
    "pyyaml>=6.0.2",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "thop>=0.1.1.post2209072238",
    "torch>=2.12.1",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
]
