[package]
name = "ente-accounts"
edition = "2024"

[features]
museum = []

[dependencies]
ente-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
bip39 = { version = "2", default-features = false, features = ["std"] }
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
sha2 = "0.11"
srp = { version = "0.7.0-rc.3", default-features = false }
subtle = "2"
uuid = { version = "1.11", features = ["js", "serde", "v4"] }
zeroize = { version = "1.8", features = ["derive"] }
urlencoding = "2.1"

[dev-dependencies]
ente-test-support.workspace = true
hmac = "0.13"
mockito = "1.6"
rand_core = { version = "0.6", features = ["getrandom"] }
sha1 = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
