[package]
name = "ente-ensu-uniffi"
edition = "2024"

[lib]
name = "ensu"
crate-type = ["staticlib", "cdylib"]

[dependencies]
ente-assets.workspace = true
ente-ensu = { workspace = true, features = ["transcription"] }
thiserror.workspace = true
tokio = { version = "1", features = ["rt-multi-thread"] }
uniffi.workspace = true
uuid = { version = "1" }
